tests/syntax_tests/data/parsing/errors/structure/recordFieldKeywordInType.res
type r = {
  id: string,
  type: int,
}

